# aapt2

./: CMakeLists-aarch64-linux.txt  CMakeLists.txt  aarch64-linux-build.sh  aarch64-linux-gnu.cmake  aarch64-linux-patch.sh  build-linux-aarch64.sh  patch.sh
.github/workflows/: aarch64-linux-build.yml  build-linux-aarch64.yml  check.yml
